fix header items alignment

--- a/Frontend/src/app/components/store-header/store-header.component.css
+++ b/Frontend/src/app/components/store-header/store-header.component.css
@@ -2,19 +2,30 @@
   background-color: #333;
   color: white;
   padding: 8px;
-  display: flex;
-  text-align: center;
-  justify-content: space-between;
   border: 4px solid darkslategray;
+  display: flex;
+  align-items: center;
+}
+
+.store-name {
+  justify-content: start;
+  text-align: start;
 }
 
 .revenue-info {
-  margin: auto;
+  justify-content: center;
 }
 
 .logout-button {
   cursor: pointer;
-  text-align: center;
-  margin-top: auto;
-  margin-bottom: auto;
+  justify-content: end;
+  text-align: end;
+}
+.logout-button:hover {
+  text-decoration: underline;
+}
+
+.box {
+  flex: 1;
+  display: flex;
 }
